feat(Camelcaseify injected header parameters): For a better API uniformization of handlers
BREAKING CHANGE: Breaks previous headers usage
